--- a/casestudy_qteventstudio.html
+++ b/casestudy_qteventstudio.html
@@ -11,7 +11,8 @@
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><p id="logo">NO UNICORN (YET)</p></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
             <nav>            
@@ -42,10 +43,10 @@
 
         <div class="hero-section">
             <div class="page-wrapper">
-                <h2 class="margintop">QT/eventstudio</h2>
-                <h2>#QTfulEventsOnly</h2>
+                <h2 class="hero-header margintop">QT/eventstudio</h2>
+                <h2 class="hero-slogan">#QTfulEventsOnly</h2>
             </div>
-            <img class="margintop screenpicture" src="./images/cs_qteventstudio/QTeventstudio_2.png" alt="plakat qt/eventstudio">
+            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_2.png" alt="plakat qt/eventstudio">
         </div>
 
         <div class="page-wrapper">
@@ -119,7 +120,7 @@
                 <p class="test-text margintop">Basierend auf dem abgestimmten Brand Book, der daraus folgendsen   Strategie und den auf ihr basierenden 4 Kampagnen haben wir dann entsprechende Templates für alle digitalen Medien & Drucksorten erstellt, wie oben anhand der Bilder zum ‘Grid’ zu sehen.   
                 </p>
             </div>
-            <img class="metroboard margintop screenpicture" src="./images/cs_qteventstudio/QTeventstudio_1.png" alt="metroboard">
+            <img class="metroboard margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_1.png" alt="metroboard">
             <div class="page-wrapper">
                 <p class="margintop">“Weil die Kundin sowohl socializing als auch business-based Content in einem Brand kommunizieren wollte, mussten wir einerseits genügend Raum für das ‘Lebensgefühl hinter QT/’, andererseits aber auch den faktisch wirtschaftlichen Mehrwert des Unternehmens in ein und derselben Außendarstellung manifestieren. Unser Slogan “QTful Events Only” deckt beide dieser Seiten ab. Er steht sowohl für professionelles Eventmanagement, als auch für einzigartige Erlebnisse, die wir mit den Events persönlich verbinden.”
                 </p>
@@ -136,8 +137,8 @@
                     </p>
                 </div>
             </div>
-            <img class="margintop screenpicture" src="./images/cs_qteventstudio/QTeventstudio_socialmedia_lifeisqtful 1.png" alt="lifeisqtful">
-            <div class="swiper qtProcessSlider margintop">
+            <img class="margintop hdpicture" src="./images/cs_qteventstudio/QTeventstudio_socialmedia_lifeisqtful 1.png" alt="lifeisqtful">
+            <div class="swiper qtProcessSlider qtresults margintop">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
@@ -161,7 +162,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img class="screenpicture" src="./images/cs_qteventstudio/KW14_220404_QT_Facebook_post 1.png" alt="process five">
+                            <img src="./images/cs_qteventstudio/KW14_220404_QT_Facebook_post 1.png" alt="process five">
                         </div> 
                     </div>
                 </div>
@@ -170,18 +171,20 @@
         </div>
         <div class="swiper caseStudySwiper margintop">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="background: url('../images/casestudy2.png') no-repeat center / cover;">
                     <div class="slider-card">
                         <h3 class="casestudy-name unselectable">Siemens</h4>
-                        <button class="casestudy-bttn">View Case study -></button>
+                        <h3 class="casestudy-slogan unselectable">Fassadengestaltung</h3>
+                        <p class="casestudy-action unselectable">Folierung | Beratung</p>
+                        <a href="casestudy_siemens.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div> 
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="background: url('../images/casestudy3.png') no-repeat center / cover;">
                     <div class="slider-card">
                         <h3 class="casestudy-name unselectable">Himmel Unter Berlin</h4>
                         <h3 class="casestudy-slogan unselectable">Einladungsmanagment</h3>
-                        <p class="casestudy-action unselectable">Brand | Marketing Concept | Design</p>
-                        <button class="casestudy-bttn">View Case study -></button>
+                        <p class="casestudy-action unselectable">Marketing | Betreuung</p>
+                        <a href="casestudy_pandion.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div> 
                 </div>
             </div>
@@ -191,13 +194,13 @@
             <div class="page-wrapper">
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
-                    <h2 id="cta-mail">hello@nounicornyet.com</h2>
-                    <img src="images/mail-cta.svg" alt="mail">
+                    <h2 id="cta-mail">moritz@nounicornyet.com</h2>
+                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail"></a>
                 </div>
                 <hr></hr>
                 <div class="footer-section">
-                    <p class="footer-font">PRIVACY POLICY</p>
-                    <p class="footer-font">TERMS & CONDITIONS</p>
+                    <a href="impressum.html"><p class="footer-font">IMPRESSUM</p></a>
+                    <a href="datenschutz.html"><p class="footer-font">DATENSCHUTZ</p></a>
                 </div>
             </div>
         </div>
