--- a/casestudy_siemens.html
+++ b/casestudy_siemens.html
@@ -11,7 +11,8 @@
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><p id="logo">NO UNICORN (YET)</p></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
 
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
@@ -43,10 +44,10 @@
 
         <div class="hero-section">
             <div class="page-wrapper">
-                <h2 class="margintop">Siemensstadt Square</h2>
-                <h2>Fassadengestaltung einer denkmalgeschützten 600qm Fassade</h2>
+                <h2 class="hero-header margintop">Siemensstadt Square</h2>
+                <h2 class="hero-slogan">Fassadengestaltung einer denkmalgeschützten 600qm Fassade</h2>
             </div>
-            <img class="margintop screenpicture" src="./images/cs_siemens/siemens_fassade_rohrdamm_nollendammallee 1.png" alt="plakat qt/eventstudio">
+            <img class="margintop hdpicture" src="./images/cs_siemens/siemens_fassade_rohrdamm_nollendammallee 1.png" alt="plakat qt/eventstudio">
         </div>
 
         <div class="page-wrapper">
@@ -76,7 +77,7 @@
                     Dadurch konnten wir die Fassade mit einem, frei vom Kunden wählbaren Motiv bespielen.</p>
                 </div>
             </div>
-            <div class="swiper qtProcessSlider margintop">
+            <div class="swiper qtProcessSlider qtresults margintop">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
@@ -85,14 +86,15 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/210803_SST_Rahmenvertrag_1520x760px_07 1.png" alt="process two">
+                            <img src="./images/cs_siemens/157193599_708351716526554_5614941194828709417_n 1.png" alt="process three">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_siemens/157193599_708351716526554_5614941194828709417_n 1.png" alt="process three">
+                            <img src="./images/cs_siemens/210803_SST_Rahmenvertrag_1520x760px_07 1.png" alt="process two">
                         </div> 
                     </div>
+                    
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -100,7 +102,7 @@
                 <p class="test-text margintop">Die Fassade wurde binnen eines verlängerten Wochenendes von uns foliert, wobei der zu veröffentlichte Name nach der Folierung noch einmal durch eine Zusatzfolie überdeckt wurde, um diesen erst am Tag der Namens-Veröffentlichung enthüllen zu können.   
                 </p>
             </div>
-            <img class="metroboard margintop screenpicture" src="./images/cs_siemens/W1Zicuec_400x400 1.png" alt="metroboard">
+            <img class="siemensstadtpic margintop" src="./images/cs_siemens/W1Zicuec_400x400 1.png" alt="metroboard">
             <div class="page-wrapper">
                 <p class="margintop">“Durch unsere unermüdliche Recherche und unseren Einsatz sind wir durch das Siemensstadt-Square-Projekt nun in der Lage, unter Denkmalschutz stehende Flächen zu kommunikativen Zwecken zu nutzen. Das Projekt war ein Meilenstein in unserer bisherigen Agentur und ich freue mich sehr, diese Innovation mit vorangetrieben zu haben.””
                 </p>
@@ -123,15 +125,17 @@
                 <div class="swiper-slide">
                     <div class="slider-card">
                         <h3 class="casestudy-name unselectable">QT/eventstudio</h4>
-                        <button class="casestudy-bttn">View Case study -></button>
+                        <h3 class="casestudy-slogan unselectable">#LifeIsQTful</h3>
+                        <p class="casestudy-action unselectable">Brand | Design</p>
+                        <a href="casestudy_qteventstudio.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div> 
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" style="background: url('../images/casestudy3.png') no-repeat center / cover;">
                     <div class="slider-card">
                         <h3 class="casestudy-name unselectable">Himmel Unter Berlin</h4>
                         <h3 class="casestudy-slogan unselectable">Einladungsmanagment</h3>
-                        <p class="casestudy-action unselectable">Brand | Marketing Concept | Design</p>
-                        <button class="casestudy-bttn">View Case study -></button>
+                        <p class="casestudy-action unselectable">Marketing | Betreuung</p>
+                        <a href="casestudy_pandion.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div> 
                 </div>
             </div>
@@ -141,13 +145,13 @@
             <div class="page-wrapper">
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
-                    <h2 id="cta-mail">hello@nounicornyet.com</h2>
-                    <img src="images/mail-cta.svg" alt="mail">
+                    <h2 id="cta-mail">moritz@nounicornyet.com</h2>
+                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail"></a>
                 </div>
                 <hr></hr>
                 <div class="footer-section">
-                    <p class="footer-font">PRIVACY POLICY</p>
-                    <p class="footer-font">TERMS & CONDITIONS</p>
+                    <a href="impressum.html"><p class="footer-font">IMPRESSUM</p></a>
+                    <a href="datenschutz.html"><p class="footer-font">DATENSCHUTZ</p></a>
                 </div>
             </div>
         </div>
