--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <body>
         <header class="primary-header flex">
-            <a href="index.html"><p id="logo">NO UNICORN (YET)</p></a>
+            <a href="index.html"><img class="logo" src="./images/logo.svg" alt="logo"></a>
+            <a href="index.html"><img class="logo-mobile" src="./images/logo-mobile.svg" alt="logo"></a>
 
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
@@ -19,22 +20,22 @@
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
                         <a class="nav-item" href="index.html#offer-link">
-                            <p>ABOUT</p>
+                            <p>ÜBER UNS</p>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-item" href="index.html#founder-link">
+                        <a class="nav-item" href="index.html#casestudy-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#pricing-link">
-                            <p>PRICING</p>
+                            <p>PREISE</p>
                         </a>
                     </li>
                     <li>
                         <a class="nav-item" href="index.html#contact-link">
-                            <p>CONTACT</p>
+                            <p>KONTAKT</p>
                         </a>
                     </li>
                 </ul>
@@ -53,13 +54,13 @@
 
         <div class="page-wrapper">
             <div class="socials-section">
-                <a href="#">
+                <a href="https://www.facebook.com/nounicornyet/">
                     <p>FACEBOOK</p>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/nounicornyet/">
                     <p>INSTAGRAM</p>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/company/nounicornyet">
                     <p>LINKEDIN</p>
                 </a>
             </div>
@@ -73,25 +74,22 @@
             <hr></hr>
             <div class="offer-section" id="offer-link">
                 <div class="left-side">
-                    <h2>WAS WIR <br>BIETEN</h2>
+                    <h2 class="sticky-text">WAS WIR <br>BIETEN</h2>
                 </div>
                 <div class="right-side">
                     <div class="content-area">
-                        <img src="images/strategies.svg" alt="strategies">
                         <div class="content-text">
                             <h4>Strategien</h4>
                             <p>Unser Expertenteam aus Marketing, Public Relations und lokaler Kunst erstellen Ihre individuelle Kommunikationsstrategie, um Ihr Unternehmen kurz-, mittel- & langfristig an Ihre Zielgruppe zu binden. </p>
                         </div>
                     </div>
                     <div class="content-area">
-                        <img src="images/concepts.svg" alt="concepts">
                         <div class="content-text">
                             <h4>Konzepte</h4>
                             <p>Wir erstellen für Ihren Brand einzigartige und erlebbare Kommunikationskonzepte, um Ihr Unternehmen für Ihre Zielgruppe nahbar, modern und erlebbar zu machen. </p>
                         </div>
                     </div>
                     <div class="content-area">
-                        <img src="images/nftrealestate.svg" alt="nftrealestate">
                         <div class="content-text">
                             <h4>NFT Real Estate</h4>
                             <p>Die ultimative App zur Investoren-Akquise. Wir verbinden Ihr 3D-Modelling samt Location- & Profitabilitätsanalysen mit Live-Kommunikation und einer Gaming-Engine, um den Mehrwert Ihres kommenden Bauprojekts für Investoren lange vor Baubeginn erlebbar zu machen.
@@ -101,27 +99,27 @@
                         </div>
                     </div>
                     <div class="content-area">
-                        <img src="images/socialmedia.svg" alt="socialmedia">
                         <div class="content-text">
                             <h4>Social Media</h4>
                             <p>Wir erstellen für Ihr Unternehmen eine langfristige Social Media Planung, von der Konzeption, über die Redaktion bis hin zur Umsetzung samt Monitoring und regelmäßigem Reporting.</p>
                         </div>
                     </div>
                     <div class="content-area">
-                        <img src="images/artevents.svg" alt="artevents">
                         <div class="content-text">
                             <h4>Kunst & Events</h4>
                             <p>Die Welt ist voller Eindrücke, aber woran es fehlt, sind Erlebnisse! Aus diesem Grund bieten wir Ihrem Unternehmen eine umfangreiche Veranstaltungsplanung, von Business Talks, über Kunstausstellungen bis hin zur Performance Art. So bleibt Ihr Unternehmen nachhaltig in Erinnerung bei Ihrer Zielgruppe und Sie vermitteln die Philosophie Ihres Unternehmens zusätzlich auf erlebbare Weise. </p>
                         </div>
                     </div>
                 </div>
-                <hr></hr>
             </div>
         </div>
-
-        <div class="casestudy-section">
+        <div class="page-wrapper">
+            <hr></hr>
+        </div>
+        <div class="casestudy-section" id="casestudy-link">
             <div class="page-wrapper">
-                <h2>UNSERE BISHERIGEN PROJEKTE</h2>
+                
+                <h2>UNSERE <br> CASE STUDIES</h2>
             </div>
         </div>
 
@@ -132,21 +130,23 @@
                         <h3 class="casestudy-name unselectable">QT/eventstudio</h4>
                         <h3 class="casestudy-slogan unselectable">#LifeIsQTful</h3>
                         <p class="casestudy-action unselectable">Brand | Design</p>
-                        <a href="casestudy_qteventstudio.html"><button class="casestudy-bttn">View Case study -></button></a>
+                        <a href="casestudy_qteventstudio.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div> 
                 </div>
                 <div class="swiper-slide">
                     <div class="slider-card">
                         <h3 class="casestudy-name unselectable">Siemens</h4>
-                        <a href="casestudy_siemens.html"><button class="casestudy-bttn">View Case study -></button></a>
+                        <h3 class="casestudy-slogan unselectable">Fassadengestaltung</h3>
+                        <p class="casestudy-action unselectable">Folierung | Beratung</p>
+                        <a href="casestudy_siemens.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div> 
                 </div>
                 <div class="swiper-slide">
                     <div class="slider-card">
                         <h3 class="casestudy-name unselectable">Himmel Unter Berlin</h4>
                         <h3 class="casestudy-slogan unselectable">Einladungsmanagment</h3>
-                        <p class="casestudy-action unselectable">Brand | Marketing Concept | Design</p>
-                        <a href="casestudy_pandion.html"><button class="casestudy-bttn">View Case study -></button></a>
+                        <p class="casestudy-action unselectable">Marketing | Betreuung</p>
+                        <a href="casestudy_pandion.html"><button class="casestudy-bttn">Mehr erfahren -></button></a>
                     </div> 
                 </div>
             </div>
@@ -163,7 +163,7 @@
                         </p>
                         <div class="founder-portrait">
                             <div class="portrait-card">
-                                <img src="images/founder_picture1.png" alt="Samir Abdo">
+                                <img src="images/founder_picture1.png"  alt="Samir Abdo">
                                 <div class="founder-description">
                                     <p class="portrait-name">Samir  Abdo</p>
                                     <p>Über 30 Jahre Erfahrung in Gastronomie & Hospitality in New York, Los Angeles, New Orleans und Mailand. Dort leitete Samir Clubs, Restaurants und Bars von der Konzeption bis zur Umsetzung </p>
@@ -189,21 +189,37 @@
                 </p>
             </div>
             <div class="logo-section">
-                <img src="images/Siemens.png" alt="placeholder">
-                <img src="images/Pandion.png" alt="placeholder">
-                <img src="images/Transitraeume.png" alt="placeholder">
-                <img src="images/aethos.png" alt="placeholder">
-                <img src="images/DeutscheBahn.png" alt="placeholder">
-                <img src="images/QTEventStudio.png" alt="placeholder">
-                <img src="images/BusinessHub.png" alt="placeholder">
-                <img src="images/StoneBrewing.png" alt="placeholder">
+                <div class="logo-image">
+                    <img src="images/logo/Siemens.png" alt="siemens-logo">
+                </div>
+                <div class="logo-image">
+                    <img src="images/logo/Pandion.png" alt="pandion-logo">
+                </div>
+                <div class="logo-image">
+                    <img src="images/logo/Transitraeume.png" alt="transitraueme-logo">
+                </div>
+                <div class="logo-image">
+                    <img src="images/logo/aethos.png" alt="aethos-logo">
+                </div>
+                <div class="logo-image">
+                    <img src="images/logo/QTEventStudio.png" alt="qt-logo">
+                </div>
+                <div class="logo-image">
+                    <img src="images/logo/BusinessHub.png" alt="businesshub-logo">
+                </div>
+                <div class="logo-image">
+                    <img src="images/logo/StoneBrewing.png" alt="stonebrewing-logo">
+                </div>  
+                <div class="logo-image">
+                    <img src="images/logo/DeutscheBahn.png" alt="db-logo">
+                </div>         
             </div>
 
             <hr></hr>
 
             <div class="pricing-section" id="pricing-link">
                 <div class="pricing-text">
-                    <h2>UNSERE PREISE</h2>
+                    <h2>UNSERE<br> LEISTUNGEN</h2>
                     <p>
                         Wir betrachten jedes Projekt individuell, weil sich Zielgruppen, Brand-Parameter und die angestrebte Profitabilität von Projekt zu Projekt unterscheiden. Einen gewissen Richtwert möchten wir Ihnen dennoch zur Orientierung mitgeben.
                     </p>
@@ -211,9 +227,9 @@
                 <!-- desktop -->
                 <table>
                     <tr>
-                        <th align="left">PROJECT TYPE</th>
-                        <th align="left">HOURS OF WORK</th>
-                        <th align="left">DESCRIPTION</th>
+                        <th align="left">PROJEKT TYP</th>
+                        <th align="left">ARBEITSAUFWAND</th>
+                        <th align="left">BESCHREIBUNG</th>
                     </tr>
                     <tr> 
                         <td colspan="3"> <hr /> </td>      
@@ -446,8 +462,7 @@
                 </div>
 
                 <div class="pricing-includes">
-                    <h3>JEDES PROJEkT
-                        UMFASST</h3>
+                    <h3>INKL. LEISTUNGEN AB 12 MONATEN</h3>
                     <ul>
                         <li>Definition der Unternehmensphilosophie & -werte </li>
                         <li>Definition der Corporate Identity</li>
@@ -470,12 +485,12 @@
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
                     <h2 id="cta-mail">moritz@nounicornyet.com</h2>
-                    <img src="images/mail-cta.svg" alt="mail">
+                    <a href="mailto:moritz@nounicornyet.com"><img src="images/mail-cta.svg" alt="mail"></a>
                 </div>
                 <hr></hr>
                 <div class="footer-section">
-                    <p class="footer-font">PRIVACY POLICY</p>
-                    <p class="footer-font">TERMS & CONDITIONS</p>
+                    <a href="impressum.html"><p class="footer-font">IMPRESSUM</p></a>
+                    <a href="datenschutz.html"><p class="footer-font">DATENSCHUTZ</p></a>
                 </div>
             </div>
         </div>
